Status Update
Comments
ja...@chromium.org <ja...@chromium.org>
ap...@google.com <ap...@google.com> #2
Project: chromium/src
Branch: main
Author: Joey Arhar <
Link:
Fix OptionList iterating before beginning
Expand for full commit details
Fix OptionList iterating before beginning
Before this patch, an infinite loop could occur when iterating before
the beginning of an OptionList iterator.
Fixed: 388299752
Change-Id: I9a3c5b0f2071e9fcb634e0abfea5f1f93af33913
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6168506
Reviewed-by: Traian Captan <tcaptan@chromium.org>
Commit-Queue: Joey Arhar <jarhar@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1405825}
Files:
- M
third_party/blink/renderer/core/html/forms/option_list.cc
- M
third_party/blink/renderer/core/html/forms/option_list_test.cc
Hash: 505729eedfd6243a6520d9fd09012b5dde449511
Date: Mon Jan 13 16:46:42 2025
ap...@google.com <ap...@google.com> #3
Project: chromium/src
Branch: main
Author: Anthony Vallée-Dubois <
Link:
Revert "Fix OptionList iterating before beginning"
Expand for full commit details
Revert "Fix OptionList iterating before beginning"
This reverts commit 505729eedfd6243a6520d9fd09012b5dde449511.
Reason for revert: Test failures on UBSan bot: https://ci.chromium.org/ui/p/chromium/builders/ci/Linux%20UBSan%20Tests/2767/overview
Original change's description:
> Fix OptionList iterating before beginning
>
> Before this patch, an infinite loop could occur when iterating before
> the beginning of an OptionList iterator.
>
> Fixed: 388299752
> Change-Id: I9a3c5b0f2071e9fcb634e0abfea5f1f93af33913
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6168506
> Reviewed-by: Traian Captan <tcaptan@chromium.org>
> Commit-Queue: Joey Arhar <jarhar@chromium.org>
> Cr-Commit-Position: refs/heads/main@{#1405825}
Change-Id: Ieea6cccc29d48b0ef11d7cd140e07d85c66a4bd5
No-Presubmit: true
No-Tree-Checks: true
No-Try: true
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6174237
Auto-Submit: Anthony Vallée-Dubois <anthonyvd@chromium.org>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Commit-Queue: Anthony Vallée-Dubois <anthonyvd@chromium.org>
Owners-Override: Anthony Vallée-Dubois <anthonyvd@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1406050}
Files:
- M
third_party/blink/renderer/core/html/forms/option_list.cc
- M
third_party/blink/renderer/core/html/forms/option_list_test.cc
Hash: 3bef4696dcb69725d3f1c72a0984ba91c2e00056
Date: Tue Jan 14 06:13:35 2025
ja...@chromium.org <ja...@chromium.org>
ap...@google.com <ap...@google.com> #4
Project: chromium/src
Branch: main
Author: Joey Arhar <
Link:
Reapply "Fix OptionList iterating before beginning"
Expand for full commit details
Reapply "Fix OptionList iterating before beginning"
The new test in the original patch was failing on a Linux UBSan bot,
which revealed that OptionListIterator::operator*() was dereferencing a
null element. I fixed this by adjusting the test and adding a DCHECK to
make sure the element is not null before dereferencing. I also added a
WPT to make sure that the DCHECK doesn't get hit.
This reverts commit 3bef4696dcb69725d3f1c72a0984ba91c2e00056.
Original patch: commit 505729eedfd6243a6520d9fd09012b5dde449511
Fixed: 388299752
Change-Id: I01712fec0479ca567121051b33e6478cf77818b7
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6203424
Commit-Queue: Traian Captan <tcaptan@chromium.org>
Auto-Submit: Joey Arhar <jarhar@chromium.org>
Reviewed-by: Traian Captan <tcaptan@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1412393}
Files:
- M
third_party/blink/renderer/core/html/forms/option_list.cc
- M
third_party/blink/renderer/core/html/forms/option_list.h
- M
third_party/blink/renderer/core/html/forms/option_list_test.cc
- M
third_party/blink/web_tests/TestExpectations
- A
third_party/blink/web_tests/external/wpt/html/semantics/forms/the-select-element/customizable-select/select-iterate-before-beginning.tentative.html
Hash: 721bbe5a4da69f86c172fb9100220f5f7340bac0
Date: Tue Jan 28 10:15:04 2025
Description
Open the select, navigate down with the arrow keys, that will work. Navigate up *twice*, try and interact with the select and it will now be broken.
It seems the entire frame freezes,