Fix OptionList iterating before beginning

Before this patch, an infinite loop could occur when iterating before
the beginning of an OptionList iterator.

Fixed: 388299752
Change-Id: I9a3c5b0f2071e9fcb634e0abfea5f1f93af33913
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6168506
Reviewed-by: Traian Captan <tcaptan@chromium.org>
Commit-Queue: Joey Arhar <jarhar@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1405825}