third_party/blink/renderer/core/html/forms/option_list.cc
@@ -71,7 +71,9 @@ void OptionListIterator::Retreat(HTMLOptionElement* next) {
     }
 
     if (RuntimeEnabledFeatures::SelectParserRelaxationEnabled()) {
-      if (IsA<HTMLSelectElement>(current)) {
+      if (current == select_) {
+        current = nullptr;
+      } else if (IsA<HTMLSelectElement>(current)) {
         current = ElementTraversal::PreviousAbsoluteSibling(*next, &select_);
       } else {
         current = ElementTraversal::Previous(*current, &select_);
